[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/GUI/label_HP.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/GUI/bomb.png" type="Texture" id=6]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=7]
[ext_resource path="res://assets/GUI/coin.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/brain.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 28
extra_spacing_bottom = -5
font_data = ExtResource( 5 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 155.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feedback" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1346.0
margin_bottom = 135.0

[node name="Player" type="VBoxContainer" parent="Feedback"]
margin_right = 822.0
margin_bottom = 115.0
size_flags_horizontal = 3
custom_constants/separation = 22

[node name="Bars" type="VBoxContainer" parent="Feedback/Player"]
margin_right = 822.0
margin_bottom = 53.0

[node name="Bar" type="HBoxContainer" parent="Feedback/Player/Bars"]
margin_right = 822.0
margin_bottom = 53.0

[node name="Count" type="MarginContainer" parent="Feedback/Player/Bars/Bar"]
margin_right = 100.0
margin_bottom = 53.0

[node name="Background" type="NinePatchRect" parent="Feedback/Player/Bars/Bar/Count"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Title" type="TextureRect" parent="Feedback/Player/Bars/Bar/Count/Background"]
anchor_bottom = 1.0
margin_right = 53.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/Player/Bars/Bar/Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -8.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="Feedback/Player/Bars/Bar"]
margin_left = 104.0
margin_right = 500.0
margin_bottom = 53.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="Counters" type="HBoxContainer" parent="Feedback/Player"]
margin_top = 75.0
margin_right = 822.0
margin_bottom = 115.0
custom_constants/separation = 8

[node name="CoinCounter" type="MarginContainer" parent="Feedback/Player/Counters"]
margin_right = 100.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="Feedback/Player/Counters/CoinCounter"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="Feedback/Player/Counters/CoinCounter/Background"]
anchor_left = 1.0
anchor_top = 0.5125
anchor_right = 1.0
anchor_bottom = 0.5125
margin_left = -58.0
margin_top = -26.5
margin_right = 454.0
margin_bottom = 485.5
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/Player/Counters/CoinCounter/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrainCounter" type="MarginContainer" parent="Feedback/Player/Counters"]
margin_left = 108.0
margin_right = 208.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="Feedback/Player/Counters/BrainCounter"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="Feedback/Player/Counters/BrainCounter/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -26.0
margin_right = 454.0
margin_bottom = 486.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/Player/Counters/BrainCounter/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombCounter" type="MarginContainer" parent="Feedback/Player/Counters"]
margin_left = 216.0
margin_right = 316.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="Feedback/Player/Counters/BombCounter"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="Feedback/Player/Counters/BombCounter/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -26.0
margin_right = 454.0
margin_bottom = 486.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/Player/Counters/BombCounter/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPU" type="VBoxContainer" parent="Feedback"]
margin_left = 826.0
margin_right = 1326.0
margin_bottom = 115.0
custom_constants/separation = 22

[node name="Bars" type="VBoxContainer" parent="Feedback/CPU"]
margin_right = 500.0
margin_bottom = 53.0

[node name="Bar" type="HBoxContainer" parent="Feedback/CPU/Bars"]
margin_right = 500.0
margin_bottom = 53.0

[node name="Gauge" type="TextureProgress" parent="Feedback/CPU/Bars/Bar"]
margin_right = 396.0
margin_bottom = 53.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="Count" type="MarginContainer" parent="Feedback/CPU/Bars/Bar"]
margin_left = 400.0
margin_right = 500.0
margin_bottom = 53.0

[node name="Background" type="NinePatchRect" parent="Feedback/CPU/Bars/Bar/Count"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Title" type="TextureRect" parent="Feedback/CPU/Bars/Bar/Count/Background"]
anchor_bottom = 1.0
margin_right = 53.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/CPU/Bars/Bar/Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -8.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counters" type="HBoxContainer" parent="Feedback/CPU"]
margin_top = 75.0
margin_right = 500.0
margin_bottom = 115.0
custom_constants/separation = 8
alignment = 2

[node name="CoinCounter" type="MarginContainer" parent="Feedback/CPU/Counters"]
margin_left = 184.0
margin_right = 284.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="Feedback/CPU/Counters/CoinCounter"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="Feedback/CPU/Counters/CoinCounter/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -26.0
margin_right = 454.0
margin_bottom = 486.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/CPU/Counters/CoinCounter/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrainCounter" type="MarginContainer" parent="Feedback/CPU/Counters"]
margin_left = 292.0
margin_right = 392.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="Feedback/CPU/Counters/BrainCounter"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="Feedback/CPU/Counters/BrainCounter/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -26.0
margin_right = 454.0
margin_bottom = 486.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/CPU/Counters/BrainCounter/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombCounter" type="MarginContainer" parent="Feedback/CPU/Counters"]
margin_left = 400.0
margin_right = 500.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="Feedback/CPU/Counters/BombCounter"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="Feedback/CPU/Counters/BombCounter/Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -26.0
margin_right = 454.0
margin_bottom = 486.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Feedback/CPU/Counters/BombCounter/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
